--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ag-charts-react": "^10.0.2",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
+    "dotenv": "^16.4.5",
     "echarts": "^5.5.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
